--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.datasource.hikari.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mariadb://localhost:3306/board?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+# HikariCP
+spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mariadb://localhost:3306/board?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=dlgusrb12!@
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
