댓글 기능 추가(REST API 형식)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.datasource.hikari.username=root
 spring.datasource.hikari.password=dlgusrb12!@
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
 
-#ÀÚµ¿¸®·Îµå
 spring.devtools.livereload.enabled=true
 #MyBatis
 mybatis.configuration.map-underscore-to-camel-case=true
 
+#Gson HTTP Message Converter ì„¤ì •
+spring.mvc.converters.preferred-json-mapper=gson	#Spring Boot Version >= 2.3.0 RELEASE
